# ezutils

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: build-modules.cmake  utils.cmake
src/: CMakeLists.txt
src/task/: CMakeLists.txt  ITask.cppm  Task.cpp  Task.cppm  task.cpp  task.cppm  task_interface.cppm
src/thread/: CMakeLists.txt  IThread.cppm  Thread.cpp  Thread.cppm  thread.cppm  thread_interface.cppm
src/thread_pool/: CMakeLists.txt  IThreadPool.cppm  ThreadPool.cpp  ThreadPool.cppm  thread_pool.cpp  thread_pool.cppm  thread_pool_interface.cppm
tests/: CMakeLists.txt  main.cpp
tests/dev_tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  task.cpp
